@@ -10,6 +10,7 @@ Release Notes
 main
 ----
 
+* [goodrunlist.py] add method for using i3live GRL (#3504)
 * Run mypy in CI (#3480)
 * mypy cleanup for core projects (#3414)
 * update some project dependencies
